Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124538

~QGuiGLThreadContext leaks memory

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.2, 6.8.0 FF
    • 6.8
    • GUI: OpenGL
    • None
    • d139642ae (dev), f17ff4be2 (6.7)
    • Multimedia wk 17-18

    Description

      address sanitizer detects this leak on exit:

      Direct leak of 8 byte(s) in 1 object(s) allocated from:
          #0 0x58ca27389bf1 in operator new(unsigned long) (/home/tim/build/build-qt6-dev-clang_17_qt_dev-Debug2/qtmultimedia/tests/auto/integration/qmediaplayerbackend/tst_qmediaplayerbackend+0x12bbf1) (BuildId: 55a26874a72967cb17e205ae71fb906cfc338517)
          #1 0x7dff60ead360 in QOpenGLContextPrivate::setCurrentContext(QOpenGLContext*) /home/tim/dev/qt6-dev/qtbase/src/gui/kernel/qopenglcontext.cpp:173:25
          #2 0x7dff60eaf7c6 in QOpenGLContext::doneCurrent() /home/tim/dev/qt6-dev/qtbase/src/gui/kernel/qopenglcontext.cpp:750:5
          #3 0x7dff60ec6b69 in QGuiGLThreadContext::~QGuiGLThreadContext() /home/tim/dev/qt6-dev/qtbase/src/gui/kernel/qopenglcontext.cpp:35:22
          #4 0x7dff60ec6aee in void qThreadStorage_deleteData<QGuiGLThreadContext>(void*, QGuiGLThreadContext**) /home/tim/dev/qt6-dev/qtbase/src/corelib/thread/qthreadstorage.h:56:3
          #5 0x7dff60ec6aac in QThreadStorage<QGuiGLThreadContext*>::deleteData(void*) /home/tim/dev/qt6-dev/qtbase/src/corelib/thread/qthreadstorage.h:99:7
          #6 0x7dff5b5ae217 in QThreadStorageData::finish(void**) /home/tim/dev/qt6-dev/qtbase/src/corelib/thread/qthreadstorage.cpp:164:9
          #7 0x7dff5abea2de in QCoreApplicationPrivate::cleanupThreadData() /home/tim/dev/qt6-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:495:9
          #8 0x7dff5fe7c792 in QGuiApplicationPrivate::~QGuiApplicationPrivate() /home/tim/dev/qt6-dev/qtbase/src/gui/kernel/qguiapplication.cpp:1759:5
          #9 0x7dff5fe7cc0c in QGuiApplicationPrivate::~QGuiApplicationPrivate() /home/tim/dev/qt6-dev/qtbase/src/gui/kernel/qguiapplication.cpp:1741:1
          #10 0x7dff5ae10d72 in QScopedPointerDeleter<QObjectData>::cleanup(QObjectData*) /home/tim/dev/qt6-dev/qtbase/src/corelib/tools/qscopedpointer.h:24:9
          #11 0x7dff5adf4ad3 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::~QScopedPointer() /home/tim/dev/qt6-dev/qtbase/src/corelib/tools/qscopedpointer.h:81:9
          #12 0x7dff5adc6901 in QObject::~QObject() /home/tim/dev/qt6-dev/qtbase/src/corelib/kernel/qobject.cpp:1147:1
          #13 0x7dff5abee983 in QCoreApplication::~QCoreApplication() /home/tim/dev/qt6-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:986:1
          #14 0x7dff5fe6d8ad in QGuiApplication::~QGuiApplication() /home/tim/dev/qt6-dev/qtbase/src/gui/kernel/qguiapplication.cpp:701:1
          #15 0x58ca274e8592 in main /home/tim/dev/qt6-dev/qtmultimedia/tests/auto/integration/qmediaplayerbackend/tst_qmediaplayerbackend.cpp:3011:483
          #16 0x7dff59e2814f in __libc_start_call_main csu/../sysdeps/nptl/libc_start_call_main.h:58:16
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes